--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     <div class="row d-flex align-items-center">
       <div class="col-7 col-md-4 d-flex align-items-center">
         <a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
-        <a href="#" class="btn btn-border">Вход</a>
+        <a href="#" class="btn btn-border" data-toggle="modal" data-target="#modalEntrance">Вход</a>
       </div>
 
       <div class="col-5 col-md-8 d-flex align-items-center">
@@ -169,7 +169,6 @@
             </div>
           </div>
         </div>
-
 
       </div>
     </div>
@@ -416,6 +415,73 @@
   </svg>
 </a>
 
+
+<!-- Модальное окно -->
+<div class="modal fade" id="modalEntrance" tabindex="-1" aria-labelledby="modalEntranceLabel" aria-hidden="true">
+
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-content__left">
+        <div class="modal-item">
+          <div class="modal-icon"><img src="img/modal-icon1.svg" alt=""></div>
+          <h2 class="modal-greeting">Добро пожаловать!</h2>
+        </div>
+
+      </div>
+
+      <div class="modal-content__right">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><svg class="svg-icon"><use xlink:href="img/sprite.svg#close"></use></svg></button>
+        <div class="modal-header">
+          <h3 class="modal-title">Вход</h3>
+        </div>
+
+        <div class="modal-body">
+          <div class="quick-entry">
+            <a href="#" class="btn-social btn btn-blue" target="_blank">
+              <span class="btn-social__icon"><svg class="svg-icon"><use
+                  xlink:href="img/sprite.svg#facebook"></use></svg></span>
+              <span class="btn-social__text">Войдите через Facebook</span>
+            </a>
+            <div class="or">
+              <span>или</span>
+            </div>
+
+          </div>
+
+          <h4>Войдите с помощью почты</h4>
+
+          <form method="post" class="form">
+            <label>
+              <span class="input-title">Email</span>
+              <input type="text" name="mail" required>
+            </label>
+            <label>
+              <span class="input-title">Пароль</span>
+              <input type="password" name="password" required>
+            </label>
+
+            <label class="checkbox">
+              <input class="checkbox-inp" type="checkbox" name="checkbox">
+              <span class="checkbox-custom"></span>
+              <span class="label">Запомнить меня</span>
+            </label>
+
+            <div class="btn-group">
+              <button type="submit" class="btn btn-primary" disabled>Войти</button>
+              <a href="#" class="links-accent">Забыли пароль?</a>
+            </div>
+          </form>
+        </div>
+
+        <div class="modal-footer">
+          <h4>Нет аккаунта?</h4>
+          <a href="registration.html" class="btn btn-border-accent">Зарегистрируйтесь</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
 
 <script src="js/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
