--- a/app/project2.html
+++ b/app/project2.html
@@ -390,6 +390,292 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project1.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Глубокий образ: методология и особенности</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>300</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>01.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Фьюжн, не меняя концепции, изложенной выше, выбирает случайный математический горизонт, при этом
+                    его стоимость значительно ниже, чем в бутылках</p>
+                </div>
+                <a href="#" class="btn btn-primary">Принять участие</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project5.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Гносеологический статус художника: гипотеза и
+                  теории</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>31</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>18.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Социальная стратификация, с другой стороны, специфицирует вечнозеленый кустарник, не считаясь с
+                    затратами. Фьюжн порождает презентационный материал. </p>
+                </div>
+                <a href="#" class="btn btn-grey">Результаты</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project6.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Потребительский принцип артистизма — актуальная
+                  национальная задача</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>31</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>18.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Глиссандо существенно символизирует тон-полутоновый звукосниматель. Тектоника возможна.
+                    Символический метафоризм притягивает архипелаг. </p>
+                </div>
+                <a href="#" class="btn btn-grey">Результаты</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project9.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Гносеологический статус художника: гипотеза и
+                  теории</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>31</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>18.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Социальная стратификация, с другой стороны, специфицирует вечнозеленый кустарник, не считаясь с
+                    затратами. Фьюжн порождает презентационный материал. </p>
+                </div>
+                <a href="#" class="btn btn-grey">Результаты</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project1.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Глубокий образ: методология и особенности</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>300</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>01.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Фьюжн, не меняя концепции, изложенной выше, выбирает случайный математический горизонт, при этом
+                    его стоимость значительно ниже, чем в бутылках</p>
+                </div>
+                <a href="#" class="btn btn-primary">Принять участие</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project5.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Гносеологический статус художника: гипотеза и
+                  теории</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>31</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>18.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Социальная стратификация, с другой стороны, специфицирует вечнозеленый кустарник, не считаясь с
+                    затратами. Фьюжн порождает презентационный материал. </p>
+                </div>
+                <a href="#" class="btn btn-grey">Результаты</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project6.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Потребительский принцип артистизма — актуальная
+                  национальная задача</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>31</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>18.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Глиссандо существенно символизирует тон-полутоновый звукосниматель. Тектоника возможна.
+                    Символический метафоризм притягивает архипелаг. </p>
+                </div>
+                <a href="#" class="btn btn-grey">Результаты</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-32 project-col">
+            <div class="project-card">
+              <a href="project-page.html" class="project-card__img"><img src="img/project9.jpeg" alt=""></a>
+              <div class="project-card__body">
+                <a href="project-page.html" class="project-card__title">Гносеологический статус художника: гипотеза и
+                  теории</a>
+
+                <ul class="project-card__info">
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#people"></use>
+                      </svg>
+                    </div>
+                    <p>Участников</p>
+                    <span>31</span>
+                  </li>
+                  <li>
+                    <div class="project-card__icon">
+                      <svg class="svg-icon">
+                        <use xlink:href="img/sprite.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <p>Окончание регистрации</p>
+                    <span>18.01.21</span>
+                  </li>
+                </ul>
+
+                <div class="box-text">
+                  <p>Социальная стратификация, с другой стороны, специфицирует вечнозеленый кустарник, не считаясь с
+                    затратами. Фьюжн порождает презентационный материал. </p>
+                </div>
+                <a href="#" class="btn btn-grey">Результаты</a>
+              </div>
+            </div>
+          </div>
 
           <div class="col-12">
             <a href="#" class="btn btn-border-accent btn-load">Загрузить еще</a>
